# executorch-pd

examples/models/llama/: convert_weights.py  hf_download.py
examples/models/llama/evaluate/: eager_eval.py
examples/qualcomm/oss_scripts/llama/: CMakeLists.txt  PD_STACK.md  __init__.py  decoder_constants.py  decoder_utils.py  llama.py  pd_stack_env.sh  qnn_llama_bench.cpp  qnn_llama_pd_e2e_runner.cpp  qnn_llama_pd_runner.cpp  qnn_llama_runner.cpp  static_llm_quant_recipe.py  targets.bzl  tokenizer.py
examples/qualcomm/oss_scripts/llama/runner/: decoder_runner.h  pd_runner.cpp  pd_runner.h  prompt_processor.cpp  prompt_processor.h  pte_rebuilder.cpp  pte_rebuilder.h  runner.cpp  runner.h  token_generator.cpp  token_generator.h
examples/qualcomm/oss_scripts/llama/tools/: README.md  pte_qat_checkpoint_reverse_strip.py
examples/qualcomm/oss_scripts/llama/wrappers/: llm_wrappers.py
exir/program/: _program.py
